update: product-service